force-app/main/default/objects/BLN_ProductIdentifier__mdt/BLN_ProductIdentifier__mdt.object-meta.xml
<CustomObject>
    <label>Product Identifier</label>
    <pluralLabel>BLN_ProductIdentifiers</pluralLabel>
</CustomObject>