force-app/main/default/objects/BLN_ProductIdentifier__mdt/fields/BLN_BranchOnlyOrMobileOnly__c.field-meta.xml
<CustomField>
    <fullName>BLN_BranchOnlyOrMobileOnly__c</fullName>
    <label>Branch Only / Mobile Only</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>MobileOnlyProduct</fullName>
                <label>Mobile Only Product</label>
            </value>
            <value>
                <fullName>BranchOnlyProduct</fullName>
                <label>Branch Only Product</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>