force-app/main/default/objects/BLN_ProductIdentifier__mdt/fields/BLN_CategoryCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_CategoryCode__c</fullName>
    <label>Category Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>