force-app/main/default/objects/BLN_ProductIdentifier__mdt/fields/BLN_MatchingCriteria__c.field-meta.xml
<CustomField>
    <fullName>BLN_MatchingCriteria__c</fullName>
    <label>Matching Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact</fullName>
                <default>true</default>
                <label>Exact</label>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>