force-app/main/default/objects/BLN_ProductIdentifier__mdt/fields/BLN_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>BLN_ProductCode__c</fullName>
    <label>Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>