force-app/main/default/objects/BLN_ProductIdentifier__mdt/fields/BLN_Type__c.field-meta.xml
<CustomField>
    <fullName>BLN_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CHARGES</fullName>
                <default>true</default>
                <label>CHARGES</label>
            </value>
            <value>
                <fullName>WINDSCREEN</fullName>
            </value>
            <value>
                <fullName>BODY GLASS</fullName>
            </value>
            <value>
                <fullName>PRIME</fullName>
            </value>
            <value>
                <fullName>VAPS</fullName>
            </value>
            <value>
                <fullName>REPAIR</fullName>
            </value>
            <value>
                <fullName>HIDE ON UI</fullName>
            </value>
            <value>
                <fullName>EXCLUDE FOR APPOINTMENT</fullName>
            </value>
            <value>
                <fullName>STATIC</fullName>
            </value>
            <value>
                <fullName>DYNAMIC</fullName>
            </value>
            <value>
                <fullName>STATIC &amp; DYNAMIC</fullName>
            </value>
            <value>
                <fullName>SPECIALIST CALIBRATION REQUIRED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>